# agentic_ml_scientist

./: .gitignore  README.md  main.py  pyproject.toml  react.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: lint.yml
config/: general.yml  mcp.yaml
src/agents/: base.py
src/common/: config_parser.py
src/common/core/: base_parser.py
src/mcp/: server.py
