[project]
name = "agentic-ml-scientist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.2.9",
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.10",
    "pylint>=3.3.7",
]
