[project]
name = "agentic-ml-scientist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.2.9",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.10",
    "mcp[cli]>=1.10.1",
    "pylint>=3.3.7",
]
